[package]
name = "ev3"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.19"
ev3dev-lang-rust = { version = "0.12.1", features=["screen"]}
jni_proc_macro= {path= "./jni_proc_macro"}

[lib]
crate-type= ["cdylib"]

[workspace]
members= ["jni_proc_macro"]

[package.metadata.cross.build]
default-target = "armv5te-unknown-linux-gnueabi"