[package]
name = "ev3"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.19"
ev3dev-lang-rust = { version = "0.12.1", features=["screen"]}
jni_proc_macro= {path= "./jni_proc_macro"}
num-traits = "0.2.15"

[lib]
crate-type= ["cdylib"]

[workspace]
members= ["jni_proc_macro"]

[package.metadata.cross.build]
default-target = "armv5te-unknown-linux-gnueabi"

[package.metadata.cross.target.armv5te-unknown-linux-gnueabi]
image = "ghcr.io/cross-rs/armv5te-unknown-linux-gnueabi-cross:local"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 2
strip = true